--- a/_posts/2023-03-31-testing.md
+++ b/_posts/2023-03-31-testing.md
@@ -1,7 +1,7 @@
 ---
-title: Tips, Warnings, and Dangers
+title: Testing
 author: Tao He
-date: 2022-06-30
+date: 2023-03-31
 category: Test
 layout: post
 ---
